# decryptomatte

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: cythonize.py
src/decryptomatte/: __init__.py  decrpyt_utils.py  decrypt.py  decrypt.pyx  open_image_util.py
tests/: conftest.py  test_decrypt.py  test_decrypt_to_psd.py
tests/data/input/: multichannel_beauty.exr
