[tool.poetry]
name = "decryptomatte"
version = "1.0.1"
description = "Extract Cryptomatte data from EXR image files"
authors = ["tappi287 <tapper.stefan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tappi287/decryptomatte"
packages = [{include = "decryptomatte", from="src"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openimageio = [
    {version = "^2.5.8.0", python = "3.11", source = "piwigo" },
    {version = "^2.0.7", python = "3.10", source = "piwigo" }
]
numpy = "^1.26.4"
mmh3 = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"


[[tool.poetry.source]]
name = "piwigo"
url = "https://piwigo.ilikeviecher.com/ftp-upload/packages"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
